# Conway-Game-of-Life

./: CHANGELOG.md  Conway-Game-of-Life.cabal  readme.md
app/: Main.hs
